add portfolio.html file

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <main>
             <!--Sidebar section-->
             <div class="sidebar">
-                 <img class="sidebar-img" src="img_3386.jpg">
+                 <img class="sidebar-img" src="img/IMG_3386.jpg">
             </div>
 
             <!--Content section-->
