add portfolio.html file

--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -69,10 +69,18 @@
 			turn it around! 
 			*/
 			function update()  {
-                // frame 1 
-                PositionX = 0 + 10;
-                moveBoxTo(PositionX);
-               
+                    // frame 1 
+                   PositionX = 0 + 10;
+                  moveBoxTo(PositionX);
+                  //frame 2
+                 PositionX = 10 + 10;
+                 moveBoxTo(PositionX);
+                 //frame 3
+                 PositionX= 20 + 10; 
+                 moveBoxTo(positionX);
+                 //frame 4
+                 PositionX = 30 + 10;
+                 moveBoxTo(PositionX);
 
 
 			};
